Implementing tests for the remaining routes and concluding testing for all routes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest"
+    "test": "vitest -- --threads false"
   },
   "keywords": [],
   "author": "",
