--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex",
     "lint": "eslint src --ext .ts --fix",
+    "build": "tsup src --out-dir build",
     "test": "vitest -- --threads false"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "eslint": "^8.56.0",
     "npm": "^10.4.0",
     "supertest": "^6.3.4",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
